--- a/app/src/main/res/layout/item_movie.xml
+++ b/app/src/main/res/layout/item_movie.xml
@@ -22,9 +22,11 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
         android:maxLines="1"
+        android:ellipsize="end"
         android:textColor="?attr/colorOnBackground"
         android:textSize="20sp"
         android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/movie_poster"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -71,8 +73,10 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
         android:maxLines="1"
+        android:ellipsize="end"
         android:textColor="?attr/colorOnBackground"
         android:textSize="14sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/movie_poster"
         app:layout_constraintTop_toBottomOf="@+id/year" />
 
