feat: localization, rating color, add font, create text elipsis, fix some bugs

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,6 +24,7 @@
         android:backgroundTint="?attr/colorSurface"
         android:visibility="gone"
         app:itemGravity="center"
+        android:elevation="4dp"
         app:itemIconTint="@color/bottom_nav_icon_color"
         app:itemRippleColor="@android:color/transparent"
         app:itemTextColor="@color/bottom_nav_text_color"
