--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -110,6 +110,7 @@
         android:text="@string/login"
         android:textColor="@color/active_button_text"
         android:textSize="16sp"
+        android:textFontWeight="500"
         app:backgroundTint="@color/active_button"
         app:cornerRadius="@dimen/medium"
         app:layout_constraintBottom_toTopOf="@+id/register_btn"
@@ -127,6 +128,7 @@
         android:text="@string/register"
         android:textColor="?attr/colorPrimary"
         android:textSize="16sp"
+        android:textFontWeight="500"
         app:backgroundTint="@android:color/transparent"
         app:cornerRadius="@dimen/medium"
         app:layout_constraintBottom_toBottomOf="parent"
