--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -42,6 +42,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom"
+                android:textFontWeight="500"
                 android:layout_marginHorizontal="92dp"
                 android:layout_marginBottom="32dp"
                 android:text="@string/watch" />
@@ -65,7 +66,7 @@
             android:text="@string/favourites"
             android:textColor="?attr/colorPrimary"
             android:textSize="24sp"
-            android:textStyle="bold"
+            android:textFontWeight="700"
             android:visibility="gone" />
 
         <androidx.recyclerview.widget.RecyclerView
@@ -83,10 +84,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/gallery"
+            android:textFontWeight="700"
             android:layout_marginTop="32dp"
             android:textColor="?attr/colorPrimary"
-            android:textSize="24sp"
-            android:textStyle="bold" />
+            android:textSize="24sp" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/movie_recycler"
