--- a/app/src/main/res/layout/item_movie.xml
+++ b/app/src/main/res/layout/item_movie.xml
@@ -62,8 +62,10 @@
         android:layout_marginStart="4dp"
         android:layout_marginTop="4dp"
         android:maxLines="1"
+        android:ellipsize="end"
         android:textColor="?attr/colorOnBackground"
         android:textSize="14sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/separator"
         app:layout_constraintTop_toBottomOf="@+id/title" />
 
