--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -32,6 +32,7 @@
         android:textAlignment="textStart"
         android:textColor="?attr/colorOnBackground"
         android:textSize="24sp"
+        android:textFontWeight="700"
         app:layout_constraintBottom_toBottomOf="@id/avatar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/avatar"
@@ -125,7 +126,8 @@
                 android:id="@+id/gender_toggle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="16dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginHorizontal="16dp"
                 android:enabled="false"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -200,6 +202,7 @@
         android:text="@string/logout"
         android:textColor="?attr/colorPrimary"
         android:textSize="16sp"
+        android:textFontWeight="500"
         app:backgroundTint="@android:color/transparent"
         app:cornerRadius="@dimen/medium"
         app:layout_constraintBottom_toBottomOf="parent"
