--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,9 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <style name="DefaultTextInputLayout" parent="Widget.Material3.TextInputLayout.OutlinedBox">
+        <item name="boxCornerRadiusTopStart">@dimen/medium</item>
+        <item name="boxCornerRadiusTopEnd">@dimen/medium</item>
+        <item name="boxCornerRadiusBottomStart">@dimen/medium</item>
+        <item name="boxCornerRadiusBottomEnd">@dimen/medium</item>
+    </style>
 
     <style name="DefaultEditText">
         <item name="android:textSize">14sp</item>
         <item name="android:maxLines">1</item>
+        <item name="android:textFontWeight">400</item>
+        <item name="fontFamily">@font/ibm_plex_sans</item>
     </style>
 
     <style name="Error">
@@ -28,6 +36,7 @@
         <item name="android:textAlignment">textStart</item>
         <item name="android:textSize">16sp</item>
         <item name="android:textColor">?attr/colorOnSurface</item>
+        <item name="android:textFontWeight">500</item>
     </style>
 
     <style name="ProfileInfoText">
@@ -36,9 +45,10 @@
         <item name="android:paddingVertical">12dp</item>
         <item name="android:maxLines">1</item>
         <item name="android:textAlignment">textStart</item>
-        <item name="android:textSize">16sp</item>
+        <item name="android:textSize">14sp</item>
         <item name="android:background">@drawable/tv_border</item>
         <item name="android:textColor">?attr/colorPrimary</item>
+        <item name="android:textFontWeight">400</item>
     </style>
 
     <style name="PrimaryButton">
@@ -49,6 +59,7 @@
         <item name="android:textSize">14sp</item>
         <item name="android:background">?attr/colorPrimary</item>
         <item name="android:textColor">?attr/colorOnPrimary</item>
+        <item name="android:textFontWeight">500</item>
     </style>
 
     <style name="FilledButton" parent="Widget.Material3.Button">
@@ -58,6 +69,7 @@
         <item name="android:textAlignment">center</item>
         <item name="android:textSize">16sp</item>
         <item name="android:textColor">?attr/colorOnPrimary</item>
+        <item name="android:textFontWeight">500</item>
 
         <item name="backgroundTint">?attr/colorPrimary</item>
         <item name="cornerRadius">@dimen/medium</item>
@@ -70,6 +82,7 @@
         <item name="android:textAlignment">center</item>
         <item name="android:textSize">16sp</item>
         <item name="android:textColor">?attr/colorPrimary</item>
+        <item name="android:textFontWeight">500</item>
 
         <item name="backgroundTint">@android:color/transparent</item>
         <item name="cornerRadius">@dimen/medium</item>
