--- a/app/src/main/res/drawable/tv_border.xml
+++ b/app/src/main/res/drawable/tv_border.xml
@@ -4,7 +4,7 @@
     <solid android:color="@android:color/transparent" />
     <stroke
         android:width="1dp"
-        android:color="?attr/colorOnBackground" />
+        android:color="?attr/colorOnSurface" />
 
     <corners android:radius="@dimen/medium" />
 </shape>
