--- a/app/src/main/res/layout/fragment_icon_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_icon_bottom_sheet.xml
@@ -18,12 +18,19 @@
         android:textSize="20sp"
         android:textStyle="bold" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/icons_recycler_view"
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:clipToPadding="false"
-        android:paddingHorizontal="16dp"
-        tools:listitem="@layout/item_icon" />
+        android:fillViewport="true"
+        android:overScrollMode="never">
+
+        <GridLayout
+            android:id="@+id/icons_grid"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:columnCount="4"
+            android:orientation="horizontal"
+            android:useDefaultMargins="false" />
+    </androidx.core.widget.NestedScrollView>
 
 </LinearLayout>
