--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -54,12 +54,9 @@
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/username_til"
+                style="@style/DefaultTextInputLayout"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:boxCornerRadiusBottomEnd="@dimen/medium"
-                app:boxCornerRadiusBottomStart="@dimen/medium"
-                app:boxCornerRadiusTopEnd="@dimen/medium"
-                app:boxCornerRadiusTopStart="@dimen/medium">
+                android:layout_height="wrap_content">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/username_et"
@@ -74,12 +71,9 @@
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/email_til"
+                style="@style/DefaultTextInputLayout"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:boxCornerRadiusBottomEnd="@dimen/medium"
-                app:boxCornerRadiusBottomStart="@dimen/medium"
-                app:boxCornerRadiusTopEnd="@dimen/medium"
-                app:boxCornerRadiusTopStart="@dimen/medium">
+                android:layout_height="wrap_content">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/email_et"
@@ -95,12 +89,9 @@
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/name_til"
+                style="@style/DefaultTextInputLayout"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:boxCornerRadiusBottomEnd="@dimen/medium"
-                app:boxCornerRadiusBottomStart="@dimen/medium"
-                app:boxCornerRadiusTopEnd="@dimen/medium"
-                app:boxCornerRadiusTopStart="@dimen/medium">
+                android:layout_height="wrap_content">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/name_et"
@@ -115,12 +106,9 @@
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/password_til"
+                style="@style/DefaultTextInputLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:boxCornerRadiusBottomEnd="@dimen/medium"
-                app:boxCornerRadiusBottomStart="@dimen/medium"
-                app:boxCornerRadiusTopEnd="@dimen/medium"
-                app:boxCornerRadiusTopStart="@dimen/medium"
                 app:endIconMode="password_toggle">
 
                 <com.google.android.material.textfield.TextInputEditText
@@ -137,12 +125,9 @@
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/repeat_password_til"
+                style="@style/DefaultTextInputLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:boxCornerRadiusBottomEnd="@dimen/medium"
-                app:boxCornerRadiusBottomStart="@dimen/medium"
-                app:boxCornerRadiusTopEnd="@dimen/medium"
-                app:boxCornerRadiusTopStart="@dimen/medium"
                 app:endIconMode="password_toggle">
 
                 <com.google.android.material.textfield.TextInputEditText
@@ -159,12 +144,9 @@
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/birth_date_til"
+                style="@style/DefaultTextInputLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:boxCornerRadiusBottomEnd="@dimen/medium"
-                app:boxCornerRadiusBottomStart="@dimen/medium"
-                app:boxCornerRadiusTopEnd="@dimen/medium"
-                app:boxCornerRadiusTopStart="@dimen/medium"
                 app:endIconDrawable="@drawable/icon_calendar"
                 app:endIconMode="custom">
 
@@ -245,6 +227,7 @@
         android:text="@string/register"
         android:textColor="@color/active_button_text"
         android:textSize="16sp"
+        android:textFontWeight="500"
         app:backgroundTint="@color/active_button"
         app:cornerRadius="@dimen/medium"
         app:layout_constraintBottom_toTopOf="@+id/login_btn"
@@ -263,6 +246,7 @@
         android:text="@string/already_have_account"
         android:textColor="?attr/colorPrimary"
         android:textSize="16sp"
+        android:textFontWeight="500"
         app:backgroundTint="@android:color/transparent"
         app:cornerRadius="@dimen/medium"
         app:layout_constraintBottom_toBottomOf="parent"
