--- a/app/src/main/res/layout/item_icon.xml
+++ b/app/src/main/res/layout/item_icon.xml
@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@id/icon_container"
-    android:layout_width="74dp"
-    android:layout_height="74dp"
+    android:id="@+id/icon_container"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    app:cardBackgroundColor="?attr/colorPrimary"
+    app:cardCornerRadius="128dp"
     android:clickable="true"
-    app:cardCornerRadius="74dp"
-    app:strokeWidth="0dp">
+    app:strokeWidth="0dp"
+    app:cardUseCompatPadding="false">
 
     <ImageView
         android:id="@+id/icon"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="?attr/colorPrimary"
-        android:contentDescription="@string/description_collection_icon"
+        android:adjustViewBounds="true"
         android:padding="16dp"
-        android:src="@drawable/icon_heart"
-        app:tint="?attr/colorOnPrimary" />
+        android:contentDescription="@string/description_collection_icon" />
 
 </com.google.android.material.card.MaterialCardView>
