--- a/app/src/main/res/layout/item_collection_movie.xml
+++ b/app/src/main/res/layout/item_collection_movie.xml
@@ -29,6 +29,7 @@
         android:ellipsize="end"
         android:textColor="?attr/colorOnBackground"
         android:textSize="14sp"
+        android:textFontWeight="600"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/collection_movie_poster"
         app:layout_constraintTop_toTopOf="parent"
@@ -38,12 +39,13 @@
         android:id="@+id/description"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginHorizontal="8dp"
         android:layout_marginEnd="16dp"
         android:maxLines="3"
         android:ellipsize="end"
         android:textColor="?attr/colorOnBackground"
         android:textSize="14sp"
+        android:textFontWeight="400"
         app:layout_constraintStart_toStartOf="@+id/title"
         app:layout_constraintTop_toBottomOf="@+id/title"
         app:layout_constraintEnd_toEndOf="parent" />
